# QCD-Phase-Transitions-ML

./: README.md  computational_showcase.py  ml_projects_showcase.py  ml_showcase.py  physics_to_ml_pipeline.py  pyproject.toml  requirements.txt
artifacts/: metrics.json  model.joblib
data/: achargecode_nonstrange  achargecode_nonstrange_l  bchargecode_strange_2d  bchargecode_strange_2d_l  cisospin_hadron_strange_2d_l  cisospin_quarkstrange_2d_l  eos.skrishna  ifs1_oct
scripts/: eval.py  figures_2d_T0_local_final.py  figures_2d_T160_local.py  figures_appendix_yi.py  figures_exact2.py  predict.py  train.py
src/: visualization
src/qcd_eos_ml/: __init__.py  cli.py  data.py  features.py  labels.py  models.py  plotting.py
src/qcd_eos_ml.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_data.py
