[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qcd-eos-ml"
version = "0.1.0"
description = "End-to-end pipeline for QCD EoS phase classification and figure generation (Python)"
authors = [{name="Krishna Aryal"}]
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.23",
    "scikit-learn>=1.2",
    "matplotlib>=3.7",
    "joblib>=1.3",
    "pyyaml>=6.0"
]

[project.scripts]
qcd-train = "qcd_eos_ml.cli:train_cli"
qcd-eval = "qcd_eos_ml.cli:eval_cli"
qcd-predict = "qcd_eos_ml.cli:predict_cli"
qcd-figures = "qcd_eos_ml.cli:figures_cli"
